--- a/our-story.html
+++ b/our-story.html
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="images/small-logo.svg" width="80" alt="Breda University of Applied Sciences">
+          <img src="images/small-logo.png" width="80" alt="Breda University of Applied Sciences">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -94,7 +94,7 @@
     <div class="row full-height align-items-center m-0">
       <div class="col-lg-7 p-0">
         <video autoplay loop muted class="video-full-height">
-          <source src="images/animation.mp4" type="video/mp4">
+          <source src="images/our-story-graphic.mp4" type="video/mp4">
         </video>
       </div>
       <div class="col-lg-5 text-center d-flex align-items-center justify-content-center">
