--- a/appendix-one.html
+++ b/appendix-one.html
@@ -28,7 +28,7 @@
      <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="images/small-logo.svg" width="80" alt="Breda University of Applied Sciences">
+            <img src="images/small-logo.png" width="80" alt="Breda University of Applied Sciences">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
