--- a/corporate.html
+++ b/corporate.html
@@ -53,7 +53,7 @@
      <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="images/small-logo.svg" width="80" alt="Breda University of Applied Sciences">
+          <img src="images/small-logo.png" width="80" alt="Breda University of Applied Sciences">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -229,7 +229,7 @@
            <div class="body-text-corporate">
             <h4 class="heading-corporate-1">Font choices</h4>
             <h5 class="body-text-corporate">Heading Fonts</h5>
-            <li class="new-rocker-font">•New Rocker</li>
+            <li class="new-rocker-font">•New Rocker - I need to put in the link from Google Fonts</li>
             <li class="medieval-sharp-font">•Medieva Sharp</li>
             <em >The hard rock vibe is perfectly complemented by the sharp, edgy appearance of this font. Hard rock music is frequently connected with a raw intensity that can be evoked by its powerful design and sharp serifs. Like the main acts at a rock concert, it stands out and attracts attention.</em>
            
