--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <div id="our-features" class="container-fluid my-0 bg-purple1 text-center">
   <div class="row justify-content-center align-items-center">
     <!-- Image Column -->
-    <div class="col-12 col-md-8 d-flex justify-content-center align-items-center">
+    <div class="col-12 col-md-4 text-md-center text-left text-column-desktop">
       <img src="images/screen-map.png" alt="Descriere relevantă" class="img-size img-fluid">
     </div>
     <!-- Text Column -->
@@ -117,8 +117,8 @@
       <p>Based on your upcoming concert thrills, find and connect directly with fellow hard rock enthusiasts that share your concert vibe and band tastes. Find your people, your tribe.</p>
     </div>
     <!-- Image Column -->
-    <div class="col-12 col-md-8 d-flex justify-content-center align-items-center">
-      <img src="images/screen-match.png" alt="Descriere relevantă" class="img-size img-fluid">
+    <div class="col-12 col-md-4 text-md-center text-left text-column-desktop">
+      <img src="images/screen-match.png" alt="Descriere relevantă" class="img-size">
     </div>
   </div>
 </div>
@@ -132,8 +132,8 @@
       <p>Reveal your personal style on Amplify by personalising your profile. How do you prefer to rock out?...</p>
     </div>
     <!-- Image Column -->
-    <div class="col-12 d-flex justify-content-center align-items-center mt-3"> <!-- Adăugat mt-3 pentru a adăuga spațiu deasupra imaginii -->
-      <img src="images/screen-profile.png" alt="Descriptive Alt Text" class="img-fluid img-size1">
+    <div class="col-12 col-md-4 text-md-center text-left text-column-desktop">
+      <img src="images/screen-profile.png" alt="Descriptive Alt Text" class="img-size-desktop img-fluid">
     </div>
   </div>
 </div>
