--- a/index.html
+++ b/index.html
@@ -93,36 +93,34 @@
     
 
 <!-- Our Features start -->
-<div id="our-features" class="container-fluid my-0 bg-purple1 text-center">
-  <div class="row justify-content-center align-items-center">
-    <!-- Image Column -->
-    <div class="col-12 col-md-4 text-md-center text-left text-column-desktop">
-      <img src="images/screen-map.png" alt="Descriere relevantă" class="img-size img-fluid">
-    </div>
-    <!-- Text Column -->
-    <div class="col-12 col-md-4 text-md-center text-left">
+<div id="our-features" class="container-fluid-features my-0 bg-purple1 text-center">
+  <div class="row justify-content-center align-items-center flex-column-reverse flex-md-row">
+    <!-- Text Column for Mobile First: It stacks on top when in mobile view -->
+    <div class="col-12 col-md-4 d-flex flex-column justify-content-center align-items-center text-column-mobile">
       <h2>All your upcoming rock concerts in one place</h2>
       <p>Amplify is the ultimate tool for hard rock fans...</p>
     </div>
+    <!-- Image Column -->
+    <div class="col-12 col-md-4 text-center">
+      <img src="images/screen-map.png" alt="Descriere relevantă" class="img-size img-fluid">
+    </div>
   </div>
 </div>
 
 
-
-<div class="container-fluid-features my-0 bg-purple2 text-center">
-  <div class="row justify-content-center align-items-center flex-column-reverse-mobile">
+<div class="container-fluid my-0 bg-purple2">
+  <div class="row justify-content-center align-items-center">
+    <!-- Image Column -->
+    <div class="col-12 col-lg-6 my-auto text-center">
+      <img src="images/screen-match.png" alt="Descriere relevantă" class="img-fluid center-block">
+    </div>
     <!-- Text Column -->
-    <div class="col-12 col-md-4 d-flex flex-column justify-content-center align-items-center">
+    <div class="col-12 col-lg-6 text-lg-left">
       <h2>Connect with Hard Rock Fans Hitting the Same Shows</h2>
       <p>Based on your upcoming concert thrills, find and connect directly with fellow hard rock enthusiasts that share your concert vibe and band tastes. Find your people, your tribe.</p>
     </div>
-    <!-- Image Column -->
-    <div class="col-12 col-md-4 text-md-center text-left text-column-desktop">
-      <img src="images/screen-match.png" alt="Descriere relevantă" class="img-size">
-    </div>
   </div>
 </div>
-
 
 <div class="container-fluid-features my-0 bg-purple1">
   <div class="row justify-content-center align-items-center flex-column-reverse-mobile">
@@ -131,10 +129,10 @@
       <h1>Rock out in a duet or unleash the power of a crowd</h1>
       <p>Reveal your personal style on Amplify by personalising your profile. How do you prefer to rock out?...</p>
     </div>
-    <!-- Image Column -->
-    <div class="col-12 col-md-4 text-md-center text-left text-column-desktop">
-      <img src="images/screen-profile.png" alt="Descriptive Alt Text" class="img-size-desktop img-fluid">
-    </div>
+   <!-- Image Column -->
+<div class="col-12 col-md-8 text-md-center text-left text-column-desktop">
+  <img src="images/screen-profile.png" alt="Descriptive Alt Text" class="img-size-desktop img-fluid">
+</div>
   </div>
 </div>
 
