--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <source src="images/landing-page-video.mp4" type="video/mp4">
         Browserul tău nu suportă elementul video.
       </video>
-      <a href="#our-features" class="btn btn-lg btn-danger m-1 d-block d-sm-inline btn-primary">Check our features</a>
+      <a href="#our-features" class="btn btn-lg btn-danger m-1 d-block d-sm-inline btn-primary-landing">Check our features</a>
     </div>
     
 
