--- a/corporate.html
+++ b/corporate.html
@@ -293,7 +293,7 @@
             <li>They want to have new experiences </li>
             </p>
             <h5 class="em-spacing1">Social Media choice</h5>
-            <p>Target audience is  hard rock fans aged between 18-28, who are casual listeners and open to listen to different sub-genres of rock.  Instagram is the most used platform by people aged 18-34. They make up 61 % of all Instagram users (Zote,2024). From the conducted interviews all 8 of our interviewees use Instagram as their preferred platform. Some of them use Reddit and just 1 has Facebook,  which he hasn’t opened in months , so we decided not to focus on Facebook and choose only Instagram.
+            <p>Target audience is hard rock fans aged between 18-30, who are hard rock listeners and open to listen to different sub-genres of rock, they enjoy the rush of attending concerts more than once a year.  Instagram is the most used platform by people aged 18-34. They make up 61 % of all Instagram users (Zote,2024). From the conducted interviews all 8 of our interviewees use Instagram as their preferred platform. Some of them use Reddit and just 1 has Facebook,  which he hasn’t opened in months , so we decided not to focus on Facebook and choose only Instagram.
             </p>
             <h5 class="em-spacing1">Objectives</h5>
             <h6 class="em-spacing">1. Reach</h6>
@@ -341,8 +341,7 @@
           <a  class="nav-link-corporate" href="appendix-one.html">See Appendix 1 for the Persona</a>
           <div class="container">
             <h2 class="corporate-heading">Content Calendar</h2>  
-            <p class="em-spacing1"><i>These are our new objectives and our future content calendar:</i></p>
-            <p class="body-accent">First photo is the first content calendar, CLICK ON THE ARROW for the second content calendar improved for future</p>
+            <p class="body-accent">First photo is the first content calendar, CLICK ON THE ARROW for the improved version of our first content calendar, after testing out different posting times.</p>
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
               <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -394,6 +393,7 @@
 
           <h4 id="marketing-3" class="heading-corporate-1">Future Planning</h4>
           <p>If we continue the campaign in the future, we will first set new objectives, so that we have clear goals and the content we make aims to reach those objectives. We will also make a new Content calendar, because it helped  us a lot during those four weeks. It removed the stress from forgetting when to post and what to post, brainstorming and planning the content ahead helped us save more time on thinking during the campaign and gave us time to interact with our audience and be more active on stories. In the future we will focus on reels, because they brought the most traffic to our page, but we will use more trendy instagram sounds so they reach more people. We will also make reels have strong hooks and more information both in the video and in the caption, because our best performing reel had both of those. For posts we will add questions that the audience can answer in the comments for further engagement and start discussions. We will post more stories with interactive questions, polls. We want to interact more with our audience so we build trust and loyalty. In the future we would also want to have posts or reels in collaboration with influencers or hard rock bands for some giveaway.  We found that giveaways bring a lot of engagement to profiles. We posted our website link too late and with no previous announcement so in the future, when there are new changes in our website or app, we will notify the audience that changes will be made or that there will be new announcements( like the giveaways) so we build anticipation in our audience and further engagement.</p>
+          <p class="em-spacing1"><i>These are our new objectives and our future content calendar:</i></p>
           <p class="bold-marketing em-spacing1">Reach
           </p>
           <li>Reach 4000 accounts through “accounts reached” by April 31st, 2024.
@@ -414,8 +414,16 @@
           <li>Reach a minimum of 100 comments on each giveaway Instagram post by March 31st, 2024</li>
           <li>Have at least 3 saves on our posts and reels by April 31st, 2024.</li>
           <li>Have at least 2 shares per post on Instagram by April 31st, 2024</li>
+          <br>
+          <div>
+            <img class="img-fluid" src="images/last-content-calendar.png" alt="Placeholder Image">
+          </div>
 
           <h4 id="marketing-4" class="heading-corporate-1 em-spacing1">Professionalism</h4>
+          <p>Here is our Instagram page:</p>
+           <a href="https://www.instagram.com/amplifynetherlands/" class="footer-a social-icons">
+                <i class="fab fa-instagram"></i>
+            </a>
           <h5 class="em-spacing1">Instagram Execution</h5>
           <p>For our Instagram posts we use our three primary colors- red, dark gray and purple. We also add a lighting bolt which is a symbol of our brand (also in the logo) and a guitar to also amplify that our brand is connected to rock. We used a different font from the one on our website, because this is more readable when the background is one of our bright colors, it is also more bold.</p>
           
