--- a/corporate.html
+++ b/corporate.html
@@ -214,11 +214,12 @@
           <h4  class="body-text-corporate"><i>Visual Identity:</i></h4>
           <br>
           <h4  class="body-text-corporate"><i>Supporting Visuals</i></h4>
-          <div>
+          <div class="container-content my-0">
             <video autoplay muted loop id="myVideo">
               <source src="images/landing-page-video.mp4" type="video/mp4">
               Browserul tău nu suportă elementul video.
             </video>
+          </div>
           <!-- End Content, start Production -->
           <div class="body-text-corporate">
           <h2 id="production" class="heading-corporate">Production</h2>
