--- a/corporate.html
+++ b/corporate.html
@@ -15,7 +15,9 @@
     <link href="https://fonts.googleapis.com/css2?family=New+Rocker&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tauri&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&family=Permanent+Marker&family=Rock+Salt&family=RocknRoll+One&display=swap" rel="stylesheet">
-  
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=New+Rocker&family=Tauri&display=swap" rel="stylesheet">
     <!-- Own Styles - Ensure this is loaded after Bootstrap to override styles -->
     <link rel="stylesheet" href="css/styles.css">
   
@@ -37,7 +39,7 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Tauri&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=New+Rocker&family=Tauri&display=swap" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -62,10 +64,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="index.html">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active accent-color" aria-current="page" href="our-story.html">Our story</a>
+          <a class="nav-link active accent-color" aria-current="page" href="our-story.html">OUR STORY</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -85,10 +87,10 @@
         <!-- Am închis lista anterioară și am deschis o nouă listă pentru elementele 'Corporate' -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCorporate" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Corporate
+            CORPORATE
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownCorporate">
-            <li><a class="dropdown-item" href="corporate.html">Corporate</a></li>
+            <li><a class="dropdown-item" href="corporate.html">CORPORATE</a></li>
             <!-- Se pot adăuga și alte elemente de listă aici, dacă este necesar -->
           </ul>
         </li>
@@ -155,7 +157,7 @@
           <!-- End General -->
 
           <!-- Start Content -->
-          <h2 id="content" class="heading-corporate">Content</h2>
+          <h2 class="heading-corporate">Content</h2>
           <p class="body-text-corporate">Please clarify here the match between students and pieces of content. Make sure that you provide a <u>link</u> to the correct page within the website</p>
           <table class="table table-bordered table-striped table-content">
             <thead>
@@ -199,6 +201,14 @@
                   <a href="our-story.html" class="body-text-corporate">Our Values</a>
                 </td>
               </tr>
+              <tr>
+                <th scope="row" class="body-text-corporate">3.</th>
+                <td class="body-text-corporate">221906</td>
+                <td class="body-text-corporate">Copywrite for the features for our app</td>
+                <td>
+                  <a href="index.html" class="body-text-corporate">Our Features</a>
+                </td>
+              </tr>
             </tbody>
           </table>
           <h4  class="body-text-corporate"><i>Brand Name and Logo</i></h4>
@@ -220,9 +230,14 @@
               Browserul tău nu suportă elementul video.
             </video>
           </div>
+          <div  class="container-content my-0">
+            <video  autoplay muted loop>
+              <source src="images/our-story-graphic.mp4" type="video/mp4">
+            </video>
+          </div>
           <!-- End Content, start Production -->
-          <div class="body-text-corporate">
-          <h2 id="production" class="heading-corporate">Production</h2>
+          <div id="production" class="body-text-corporate">
+          <h2 class="heading-corporate">Production</h2>
           <h4 id="design-elements" class="heading-corporate-1">Design Elements</h4>
           <h4>Color palette</h4>
               <ul class="list-unstyled">
