--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
-
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Tauri&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=New+Rocker&family=Tauri&display=swap" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,10 +44,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="index.html">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active accent-color" aria-current="page" href="our-story.html">Our story</a>
+          <a class="nav-link active accent-color" aria-current="page" href="our-story.html">OUR STORY</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -63,15 +62,15 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://buas-media-interactive.github.io/prj4-guide/" target="_blank">PRJ4 Guide</a>
+          <a class="nav-link" href="https://buas-media-interactive.github.io/prj4-guide/" target="_blank">PRJ4 GUIDE</a>
         </li>
         <!-- Am închis lista anterioară și am deschis o nouă listă pentru elementele 'Corporate' -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCorporate" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Corporate
+            CORPORATE
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownCorporate">
-            <li><a class="dropdown-item" href="corporate.html">Corporate</a></li>
+            <li><a class="dropdown-item" href="corporate.html">CORPORATE</a></li>
             <!-- Se pot adăuga și alte elemente de listă aici, dacă este necesar -->
           </ul>
         </li>
@@ -92,7 +91,7 @@
         <source src="images/landing-page-video.mp4" type="video/mp4">
         Browserul tău nu suportă elementul video.
       </video>
-      <a href="#our-features" class="btn btn-lg btn-danger m-1 d-block d-sm-inline btn-primary-landing">Check our features</a>
+      <a href="#our-features" class="btn btn-lg btn-danger m-1 d-block d-sm-inline btn-primary-landing">Click to find out about our app!</a>
     </div>
     
 
@@ -102,7 +101,8 @@
     <!-- Text Column for Mobile First: It stacks on top when in mobile view -->
     <div class="col-12 col-md-4 d-flex flex-column justify-content-center align-items-center text-column-mobile">
       <h2>All your upcoming rock concerts in one place</h2>
-      <p>Amplify is the ultimate tool for hard rock fans...</p>
+      <br>
+      <p>Amplify is the ultimate tool for hard rock fans. Take control of your concert experience by handpicking the shows you're gearing up for. Tell us your preferences, and we'll tailor your Amplify journey to match your unique style of rocking!</p>
     </div>
     <!-- Image Column -->
     <div class="col-12 col-md-4 text-center">
@@ -121,6 +121,7 @@
     <!-- Text Column -->
     <div class="col-12 col-lg-6 text-lg-left">
       <h2>Connect with Hard Rock Fans Hitting the Same Shows</h2>
+      <br>
       <p>Based on your upcoming concert thrills, find and connect directly with fellow hard rock enthusiasts that share your concert vibe and band tastes. Find your people, your tribe.</p>
     </div>
   </div>
@@ -131,7 +132,7 @@
     <!-- Text Column -->
     <div class="col-12 text-center text-container-mobile mb-3"> <!-- Adăugat mb-3 pentru a adăuga spațiu sub text -->
       <h1>Rock out in a duet or unleash the power of a crowd</h1>
-      <p>Reveal your personal style on Amplify by personalising your profile. How do you prefer to rock out?...</p>
+      <p>Reveal your personal style on Amplify by personalising your profile. How do you prefer to rock out? In a massive mosh pit with fellow headbangers, or in a more intimate setting? Are you all about the high energy of the pit, or do you lean towards a more laid-back vibe?</p>
     </div>
    <!-- Image Column -->
 <div class="col-12 col-md-8 text-md-center text-left text-column-desktop">
