--- a/our-story.html
+++ b/our-story.html
@@ -24,7 +24,7 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Tauri&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=New+Rocker&family=Tauri&display=swap" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -52,10 +52,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="index.html">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active accent-color" aria-current="page" href="our-story.html">Our story</a>
+          <a class="nav-link active accent-color" aria-current="page" href="our-story.html">OUR STORY</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -75,10 +75,10 @@
         <!-- Am închis lista anterioară și am deschis o nouă listă pentru elementele 'Corporate' -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCorporate" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Corporate
+            CORPORATE
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownCorporate">
-            <li><a class="dropdown-item" href="corporate.html">Corporate</a></li>
+            <li><a class="dropdown-item" href="corporate.html">CORPORATE</a></li>
             <!-- Se pot adăuga și alte elemente de listă aici, dacă este necesar -->
           </ul>
         </li>
@@ -188,6 +188,8 @@
         <div class="col-12">
           <h2 class="our-values-title">Our values</h2>
           <div class="click-buttons">Click on the buttons to find out more!</div>
+          <br>
+          <br>
       <div class="row">
         <div class="col-md-3">
           <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" data-bs-content="Through our differences, hard rock connects us all. Everything is better when we can experience the raw, unfiltered thrill of live music together. Amplify strives to help form these connections with other fans, creating unforgettable memories." 
